<resources>
    <string name="app_name">NYC Schools</string>

    <!-- General -->
    <string name="new_york_city_schools">New York City Schools</string>
    <string name="school_name">School Name</string>
    <string name="overview">Overview</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="language_classes">Language Classes</string>
    <string name="advanced_placement_courses">Advanced Placement Courses</string>
    <string name="sat_scores_math">Math</string>
    <string name="sat_scores_reading">Reading</string>
    <string name="sat_scores_writing">Writing</string>
    <string name="error_text">An error occurred while loading Data.</string>
    <string name="school">School</string>

    <!-- Button -->
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="social">Social</string>
    <string name="website">Website</string>

    <!-- Toast -->
    <string name="toast_no_app_to_share">No app to share</string>

</resources>